--- a/class1/basic-example.html
+++ b/class1/basic-example.html
@@ -16,7 +16,7 @@
 
 	<script>
 		// Change the document background to light gray
-		document.body.style.backgroundColor = "lightgray"
+		document.body.style.backgroundColor = "lightgray";
 
 	</script>
 </body>
