Class 5 Resources - Update

--- a/class5/audio.html
+++ b/class5/audio.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-  <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered"
-    title="HTML5 Powered">
+  <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
 
   <div id="navigation">
     <a href="index.html">Home</a>
@@ -21,6 +20,9 @@
 
   <h1>Audio</h1>
 
+  <audio controls>
+    <source src="http://media.w3.org/2010/07/bunny/04-Death_Becomes_Fur.mp4"> This browser does not support the audio tag
+  </audio>
   <!-- http://media.w3.org/2010/07/bunny/04-Death_Becomes_Fur.mp4 -->
   <script src="js/main.js"></script>
 </body>
