--- a/class4/forms.html
+++ b/class4/forms.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-  <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered"
-    title="HTML5 Powered">
+  <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
 
   <div id="navigation">
     <a href="index.html">Home</a>
@@ -18,6 +17,64 @@
   </div>
 
   <h1>Forms</h1>
+
+  <form action="" method="">
+    <div>
+      <label for="username">Username</label>
+      <input id="username" type="text" value="admin">
+    </div>
+
+    <div>
+      <label for="password">Password</label>
+      <input id="password" type="password">
+    </div>
+
+    <div>
+      <label for="email">Email</label>
+      <input id="email" type="email" required placeholder="janedoe@email.com">
+    </div>
+
+    <div>
+      <label for="date">Date</label>
+      <input id="date" type="date">
+    </div>
+
+    <div>
+      <label for="color">Color</label>
+      <input id="color" type="text">
+    </div>
+
+    <div>
+      <label for="contact">Should we contact you?</label>
+      <input id="contact" type="checkbox">
+    </div>
+
+    <div>
+      <label for="radio1">Radio 1</label>
+      <input id="radio1" type="radio" name="radio-group">
+      <label for="radio2">Radio 2</label>
+      <input id="radio2" type="radio" name="radio-group">
+    </div>
+
+    <div>
+      <label for="complaints">Complaints</label>
+      <textarea id="complaints" rows="5" col="80">
+        I have no complaints. everything is awesome.
+      </textarea>
+    </div>
+
+    <div>
+      <label for="fruits">Select a fruit</label>
+      <select id="fruits">
+        <option value="apple">Applez</option>
+        <option value="orange">Orange</option>
+        <option value="kiwi">Kiwi</option>
+      </select>
+    </div>
+    <input type="submit">
+
+    <button type="submit">Submit</button>
+  </form>
 
   <script src="js/main.js"></script>
 </body>
