--- a/class5/canvas.html
+++ b/class5/canvas.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-  <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered"
-    title="HTML5 Powered">
+  <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
 
   <div id="navigation">
     <a href="index.html">Home</a>
@@ -21,6 +20,9 @@
 
   <h1>Canvas</h1>
 
+  <canvas id="canvas" height="400" width="300">
+
+  </canvas>
   <script src="js/main.js"></script>
 </body>
 
