--- a/class5/semantic.html
+++ b/class5/semantic.html
@@ -7,20 +7,32 @@
 </head>
 
 <body>
-  <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered"
-    title="HTML5 Powered">
+  <!-- Header section generally contains the logo -->
+  <header>
+    "header
+    <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
+  </header>
 
-  <div id="navigation">
+  <nav>
     <a href="index.html">Home</a>
     <a href="audio.html">Audio</a>
     <a href="canvas.html">Canvas</a>
     <a href="iframe.html">iFrame</a>
     <a href="semantic.html">Semantic</a>
     <a href="video.html">Video</a>
-  </div>
+  </nav>
 
-  <h1>Semantic HTML</h1>
+  <main>
+    <h1>Semantic HTML</h1>
 
+    <pre>
+      &lt;p&gt;Inside of pre tag&lt;/p&gt;
+    </pre>
+  </main>
+
+  <footer>
+    <span>Copyright &copy;2017</span>
+  </footer>
   <script src="js/main.js"></script>
 </body>
 
