--- a/class5/video.html
+++ b/class5/video.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-  <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered"
-    title="HTML5 Powered">
+  <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
 
   <div id="navigation">
     <a href="index.html">Home</a>
@@ -20,6 +19,10 @@
   </div>
 
   <h1>Video</h1>
+
+  <video width="400" height="300" controls>
+    <source src="https://www.html5rocks.com/en/tutorials/video/basics/devstories.mp4"> Your web browser does not support the video tag
+  </video>
 
   <!-- https://www.html5rocks.com/en/tutorials/video/basics/devstories.mp4 -->
   <script src="js/main.js"></script>
