--- a/class7/positioning.html
+++ b/class7/positioning.html
@@ -2,26 +2,54 @@
 <html>
 
 <head>
-  <title>CSS - Positioning</title>
+  <title>CSS - Box Model</title>
   <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 
 <body>
-  <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
+  <header>
+    <a id="logo" href="index.html">
+      <img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt="HTML5 Powered" title="HTML5 Powered">
+    </a>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="box-model.html">Box Model</a>
+      <a href="positioning.html">Positioning</a>
+    </nav>
+  </header>
 
-  <div id="navigation">
-    <a href="index.html">Home</a>
-    <a href="box-model.html">Box Model</a>
-    <a href="positioning.html">Positioning</a>
-  </div>
+  <main>
+    <h1>CSS - Box Model</h1>
 
-  <h1>CSS - Positioning</h1>
+    <!-- Hero Content -->
+    <div id="hero">
+      Placeholder for Hero image. Try to add an an image tag using the any of th "hero" images in the images folder.
+    </div>
 
-  <!-- Hero Content -->
-  <div id="hero"></div>
-
-  <!-- Tiles -->
-  <div class="tiles"></div>
+    <!-- Tiles -->
+    <div class="tiles">
+      <div id="tile-1" class="tile">
+        <img src="images/tile-1.jpg">
+        <h3>Position "static"</h3>
+        <p>The default position value given to all elements.</p>
+      </div>
+      <div id="tile-2" class="tile">
+        <img src="images/tile-2.jpg">
+        <h3>Position "relative"</h3>
+        <p>An element relative to itself. top and left values offset the position.</p>
+      </div>
+      <div id="tile-3" class="tile">
+        <img src="images/tile-1.jpg">
+        <h3>Position "absolute"</h3>
+        <p>Positioned relative to its closest positioned ancestor.</p>
+      </div>
+      <div id="tile-4" class="tile">
+        <img src="images/tile-2.jpg">
+        <h3>Position "fixed"</h3>
+        <p>Positioned relative to the viewport.</p>
+      </div>
+    </div>
+  </main>
 
   <script src="js/main.js"></script>
 </body>
