--- a/class7/index.html
+++ b/class7/index.html
@@ -3,20 +3,38 @@
 
 <head>
   <title>CSS - Box Model and Positioning</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 
 <body>
-  <img id="logo" src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
+  <header>
+    <a id="logo" href="index.html">
+      <img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt="HTML5 Powered" title="HTML5 Powered">
+    </a>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="box-model.html">Box Model</a>
+      <a href="positioning.html">Positioning</a>
+    </nav>
+  </header>
 
-  <div id="navigation">
-    <a href="index.html">Home</a>
-    <a href="box-model.html">Box Model</a>
-    <a href="positioning.html">Positioning</a>
-  </div>
+  <main>
+    <h1>CSS - Box Model and Positioning</h1>
+    <p>Contains resources and examples for:</p>
+    <ul>
+      <li>
+        <a href="box-model.html">Box Model</a>
+      </li>
+      <li>
+        <a href="positioning.html">Positioning</a>
+      </li>
+    </ul>
+  </main>
 
-  <h1>CSS - Box Model and Positioning</h1>
-
+  <footer>
+    <span>&copy; 2017</span>
+  </footer>
   <script src="js/main.js"></script>
 </body>
 
