Class 7 Resources - Update
Class 7 Resources update

--- a/class7/positioning.html
+++ b/class7/positioning.html
@@ -19,7 +19,7 @@
   </header>
 
   <main>
-    <h1>CSS - Box Model</h1>
+    <h1>CSS - Positioning</h1>
 
     <!-- Hero Content -->
     <div id="hero">
