Class8 Resource Updates

--- a/class8/centering.html
+++ b/class8/centering.html
@@ -25,12 +25,12 @@
 
     <!-- Inline and inline-block -->
     <div class="center-inline">
-      <span>It's raining in Omaha.</span>
+      <span>Centering an inline element.</span>
     </div>
 
     <!-- Block and inline-block -->
     <div class="center-block">
-      <p>It's not raining in Omaha.</p>
+      <p>Centering any element.</p>
     </div>
   </main>
 
