--- a/class8/responsive-design.html
+++ b/class8/responsive-design.html
@@ -26,7 +26,7 @@
 
     <!-- Hero Content -->
     <div id="hero">
-      Placeholder for Hero image. Try to add an an image tag using the any of th "hero" images in the images folder.
+      <img src="images/hero.jpg" />
     </div>
 
     <!-- Tiles -->
