Sixteen Nav Updates
Sixteen Nav Updates

--- a/sixteen/index.html
+++ b/sixteen/index.html
@@ -13,6 +13,16 @@
     <div id="logo">
       <img src="images/logo.png" alt="Sixteen Logo" title="Sixteen Logo" />
     </div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Service</a>
+      <a href="#">Team</a>
+      <a href="#">Works</a>
+      <a href="#">Client Say</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
     <button id="menu-toggle">
       <img src="images/hamburger.png" alt="Menu Toggle" title="Menu Toggle" />
     </button>
