Class 12 Resource Updates
Class 12 Resource Updates

--- a/class12/index.html
+++ b/class12/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Bootstrap</title>
+  <title>JavaScript and jQuery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -29,15 +29,31 @@
 
   <div class="jumbotron">
     <div class="container">
-      <h1 class="display-3">Hello, jQuery and JavaScript!</h1>
-      <p>Today we learn jQuery and JavaScript.</p>
+      <h1 class="display-3">Hello, JavaScript and jQuery!</h1>
+      <p>Today we start learning JavaScript and jQuery.</p>
       <p><a id="learnmore" class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <form>
+        <div class="form-group">
+          <label for="mirror-input">Mirror</label>
+          <input disabled type="password" id="mirror" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="mirror-input">Mirror input</label>
+          <input type="password" id="mirror-input" class="form-control">
+        </div>
+      </form>
     </div>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
