--- a/class13/index.html
+++ b/class13/index.html
@@ -29,24 +29,15 @@
 
   <div class="jumbotron">
     <div class="container">
-      <h1 class="display-3">Hello, JavaScript and jQuery!</h1>
-      <p>Today we start learning JavaScript and jQuery.</p>
+      <h1 class="display-3">Hello again, JavaScript and jQuery!</h1>
+      <p>JavaScript and jQuery fundamentals.</p>
       <p><a id="learnmore" class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
     </div>
   </div>
 
   <div class="container">
     <div class="row">
-      <form>
-  <div class="form-group">
-    <label for="mirror-input">Mirror</label>
-    <input disabled type="password" id="mirror" class="form-control">
-  </div>
-  <div class="form-group">
-    <label for="mirror-input">Mirror input</label>
-    <input type="password" id="mirror-input" class="form-control">
-  </div>
-</form>
+
     </div>
   </div>
 
