Added live weather data
Added live weather data for omaha and lincoln.

--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -15,10 +15,12 @@
       <h1>Dog Weather Application</h1>
 
       <select class="form-control">
+        <option selected disabled>Select a City</option>
         <option value="omaha">Omaha</option>
         <option value="lincoln">Lincoln</option>
       </select>
-      <div id="temperature">70</div>
+      <div id="temperature" class="display-1"></div>
+      <p id="description"></p>
     </div>
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
